home/.atom/styles.less
/*
 * Your Stylesheet
 *
 * This stylesheet is loaded when Atom starts up and is reloaded automatically
 * when it is changed and saved.
 *
 * Add your own CSS or Less to fully customize Atom.
 * If you are unfamiliar with Less, you can read more about it here:
 * http://lesscss.org
 */


/*
 * Examples
 * (To see them, uncomment and save)
 */

@background-color: #222;
@tab-bar-background-color: #111;
@tab-background-color: @tab-bar-background-color;
@tab-height: 2em;
@blue: #61afef;
@green: #98c379;
@magenta: #c678dd;

// hide scrollbars
body /deep/ ::-webkit-scrollbar {
  &-track, &-corner, &-thumb {
    display: none !important;
  }
}

// style the background color of the tree view
.tree-view {
  // background-color: whitesmoke;
  background-color: @background-color;

  .directory {
    .name {
      // color: #61afef;

      &:before {
        // color: #9da5b4
      }
      }
  }
  .file {
    .name {
      // color: #636d83;
    }
  }
}

// style the background and foreground colors on the atom-text-editor-element itself
atom-text-editor {
  // color: white;
  // background-color: hsl(180, 24%, 12%);
  background-color: @background-color;

  &.vim-mode {
    &:before {
      padding: 0 5px;
      z-index: 1000000000;
      position: absolute;
      top: 0;
      right: 0;
      color: black;
      font-weight: bold;
      text-transform: uppercase;
      // border: 1px solid white;
    }
    &.insert-mode:before {
      content: 'insert';
      background: @blue;
    }
    &.normal-mode:before {
      content: 'normal';
      background: @green;
    }
    &.visual-mode:before {
      content: 'visual';
      background: @magenta;
    }
  }
}



// To style other content in the text editor's shadow DOM, use the ::shadow expression
atom-text-editor::shadow .cursor {
  // border-color: red;
}

// Stop fucking blinking!
atom-text-editor::shadow .cursors .cursor { opacity: 100; }

// Thinner Line Gutter
.editor .gutter, atom-text-editor::shadow .gutter {
  .line-numbers {
    // width: 2em;
    min-width: 1em;
    font-size: 1em;
    overflow: hidden;
    .line-number {
      // width: 0px;
      color: #839496;
    }
  }
}

// Thinner Tabs
.tab-bar {
  height: @tab-height;
  padding: 0;
  background-color: @tab-bar-background-color;

  .tab {
    // top: 2px; line-height: 25px;
    line-height: @tab-height;

    &.active {
      height: 25px;

      &:before {
        height: 25px;
      }
    }

    &:after {
      background-image: none;
    }

    &:before {
      width: .2em;
    }

    .close-icon {
      line-height: @tab-height;
    }

    .title {
      background-color: @tab-background-color;
    }
  }
}

atom-panel-container.footer {
  height: @tab-height;
}

